--- a/jogodavelha/pom.xml
+++ b/jogodavelha/pom.xml
@@ -52,7 +52,8 @@
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+            	<artifactId>spring-boot-maven-plugin</artifactId>
+            	<version>3.4.6</version>
 			</plugin>
 		</plugins>
 	</build>
