logica funcional; endpoints funcionando; configuração docker tambem

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=jogodavelha
+logging.level.com.jogodavelha=info
+spring.main.banner-mode=console
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.level.root=info
