--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,3 +2,5 @@ FROM openjdk:17-jdk-slim
 VOLUME /tmp
 COPY target/jogodavelha-0.0.1-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
+WORKDIR /app
+EXPOSE 8080
