Corrige o Dockerfile para ajustar caminhos de arquivos e melhorar a legibilidade das etapas de build e run

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,11 @@
-# Etapa 1: build
+# Etapa 1 - Build
 FROM maven:3.9.5-eclipse-temurin-17 AS builder
 WORKDIR /app
-COPY backend/pom.xml backend/pom.xml
-COPY backend/src backend/src
-RUN mvn -f backend/pom.xml clean package -DskipTests
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
 
-# Etapa 2: imagem final
+# Etapa 2 - Run
 FROM eclipse-temurin:17-jdk-jammy
-COPY --from=builder /app/backend/target/*.jar app.jar
+COPY --from=builder /app/target/*.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
