--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+# version: "3"
 
 services:
   backend:
@@ -8,7 +8,7 @@ services:
     container_name: jogodavelha-backend
 
   frontend:
-    build: ./frontend
+    build: ./docs
     ports:
       - "8081:80"
     container_name: jogodavelha-frontend
