Corrige o pacote em CorsConfig, adiciona log de jogada recebida no JogoController, ajusta método de requisição no script.js e cria arquivo de configurações do VSCode.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,4 @@ logging.level.com.jogodavelha=info
 spring.main.banner-mode=console
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.level.root=info
+server.address=0.0.0.0
